fixes locations input cutting off

--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -701,6 +701,11 @@ section.footer
 .locations-input
 
     @media screen and (max-width: 540px)
+    
+        .row
+            margin-left: -6px !important
+            margin-right: -6px !important
+
         .col-xs-6
             padding: 6px !important
 
